--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,10 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      class="flex h-screen flex-col items-center justify-center bg-gradient-to-b from-gray-50 to-[#d2d6db]"
+    ></div>
     <script
       type="module"
       src="/src/main.tsx"
